# Layout_DDD

./: .gitignore  README.md  benchmark_notes.txt  config.md  evaluate.py  generate.py  hyak.md  pyproject.toml
configs/: benchmark_config.yaml  evaluator_config.yaml  experiment_config.yaml  model_config.yaml
configs/datasets/: hssd_downloaded_small.yaml  hssd_scene_instances_local.yaml  json_folder_cases.yaml  synthetic_debug.yaml
configs/evaluation/: vlm_as_judge_v1.yaml
configs/experiments/: hssd_small_room_mock.yaml  hssd_small_room_qwen3vl32b_h200.yaml
configs/grouping/: deterministic_metadata_geometry.yaml
configs/inference/: hyak_h200_qwen3vl32b.yaml  local_mock.yaml
configs/models/: mock.yaml  qwen3vl_sglang_32b.yaml
configs/repair/: compact_feedback.yaml
configs/viewer/: threejs_default.yaml
data/benchmark_cases/: bm_instance_001.json  (+1 more)
docs/: architecture.md  generic_validity_v0.md  legend_hssd.md  metrics_spec.md  oar_evaluator_v0.md  oor_evaluator_v0.md  workflow_mvp.md
legend/: README.md
reports/: current_repo_workflow_review.pptx  hssd_hab_instance_specs.json  repo_architecture_audit.md
schemas/: bm_instance.schema.json  evaluation_report.schema.json  feedback.schema.json  generator_layout_v1.schema.json  layout.schema.json  scene.schema.json
scripts/: check_model_endpoint.py  convert_hssd_hab.py  evaluate_generic_validity.py  evaluate_oar.py  evaluate_oor.py  evaluate_scene.py  generate_scene.py  map_relationships.py  prepare_hssd_hab.py  run_benchmark.py  run_demo.py  run_hssd_hab_10_qwen_validity.py  run_hyak_hssd_one_instance.sh  run_mnet_gpu_health_validity.sh  run_nl_scene_workflow.py  run_scene_harness.py  run_single_case.py  select_small_hssd_hab_scene.py  serve_qwen3vl_transformers_openai.py  validate_case.py
tests/: test_asset_mode.py  test_asset_retriever.py  test_benchmark_summary.py  test_bm_instance_schema_levels.py  test_estimated_relations.py  test_evaluation_report.py  test_evaluator.py  test_evidence_config.py  test_experiment_config.py  test_feedback_builder.py  test_generic_validity.py  test_geometry.py  test_graph.py  test_group_renderer.py  test_hssd_converter_minimal.py  test_hssd_small_selector.py  test_input_chain_boundaries.py  test_input_modes.py  test_judge_evidence_budgeting.py  test_judge_summaries.py  test_layout_json_adapter.py  test_layout_object_set_normalization.py  test_metrics_physical_deltas.py  test_metrics_scoring.py  test_nl_scene_mvp.py  test_nonblocking_vlm_evaluation.py  test_oar_evaluator.py  test_object_grouping.py  test_object_presence.py  test_oor_evaluator.py  test_openai_compatible_model.py  test_pair_judge_pipeline.py  test_physical_flags.py  test_pipeline_outputs.py  test_prompt_payload.py  test_relationship_mapper.py  test_repair_workflow.py  test_run_config.py  test_scene_evaluation.py  test_scene_harness.py  (+3 more)
(+147 files in other folders)
