[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-layout-benchmark"
version = "0.1.0"
description = "Deterministic benchmark scaffold for explicit bbox-based 3D scene layout generation by VLMs/LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22",
  "langchain-core>=0.3",
  "langgraph>=0.2",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
