[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-layout-benchmark"
version = "0.1.0"
description = "Deterministic benchmark scaffold for explicit bbox-based 3D scene layout generation by VLMs/LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
  "jsonschema>=4.22",
  "langchain>=1.3.11",
  "langchain-core>=0.3",
  "langchain-openai>=1.3.3",
  "networkx>=3.4.2",
  "numpy>=1.26",
  "openai>=2.44.0",
  "pillow>=10.0.0",
  "pydantic>=2.13.4",
  "pyyaml>=6.0",
  "requests>=2.34.2",
  "shapely>=2.0",
  "tqdm>=4.68.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
