[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-layout-benchmark"
version = "0.1.0"
description = "Adapter-based scene construction and deterministic evaluation harness."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
  "jsonschema>=4.22",
  "langchain>=1.3.11",
  "langchain-core>=0.3",
  "langchain-openai>=1.3.3",
  "networkx>=3.4.2",
  "numpy>=1.26",
  "openai>=2.44.0",
  "pillow>=10.0.0",
  "pydantic>=2.13.4",
  "pyyaml>=6.0",
  "requests>=2.34.2",
  "shapely>=2.0",
  "tqdm>=4.68.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
retrieval = [
    "sentence-transformers>=5.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
  "tests/test_asset_retriever.py",
  "tests/test_generic_validity.py",
  "tests/test_input_chain_boundaries.py",
  "tests/test_layout_json_adapter.py",
  "tests/test_nl_scene_mvp.py",
  "tests/test_oar_evaluator.py",
  "tests/test_oor_evaluator.py",
  "tests/test_relationship_mapper.py",
  "tests/test_scene_harness.py",
]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
